--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,13 @@
   margin: 0;
   padding: 0;
 }
+.text {
+  position: fixed;
+  font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  left: 50%;
+  width: fit-content;
+  text-shadow: 0 2px 5px;
+  transform: translateX(-50%);
+}
