--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,15 @@
   text-shadow: 0 2px 5px;
   transform: translateX(-50%);
 }
-
+.instructions {
+  position: fixed;
+  text-align: left;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  left: 50%;
+  bottom: 5%;
+  width: fit-content;
+  text-shadow: 0 1px 5px;
+  transform: translateX(-50%);
+}
