--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,16 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   left: 50%;
-  bottom: 5%;
+  bottom: 3%;
   width: fit-content;
   text-shadow: 0 1px 5px;
   transform: translateX(-50%);
-}  
+}
+.image {
+  position: absolute;
+  left: 8%;
+  top: -50%;
+  width: 100px;
+  opacity: 25%;
+  background-size: 100px 150px;
+}
